fix spacing for sections

--- a/src/App.scss
+++ b/src/App.scss
@@ -15,6 +15,7 @@ textarea {
 }
 
 h2 {
+  margin-top: 4rem;
   font-size: 2.5rem;
   text-align: center;
   font-weight: 700;
