--- a/src/components/Footer/footer.scss
+++ b/src/components/Footer/footer.scss
@@ -1,5 +1,6 @@
 .footer {
     &__text {
         font-size: 0.65rem;
+        text-align: center;
     }
 }
