--- a/src/components/LandingPage/landingPage.scss
+++ b/src/components/LandingPage/landingPage.scss
@@ -15,9 +15,7 @@
   &__logo-container {
     padding: 0.5rem;
     display: flex;
-    border-radius: 2.5rem;
     justify-content: space-evenly;
-    background-color: rgb(244, 242, 242);
   }
   &__logo {
     color: gray;
